// Copyright 2010 Google Inc. All Rights Reserved.
// Author: lsong@google.com (Libo Song)

syntax = "proto2";

package http_response;

message HttpHeader {
  required string key = 1;
  required string value = 2;
}

message HttpHeaders {
  required string protocol_version = 1;
  required int32 status_code = 2;
  required string reason_phrase = 3;
  repeated HttpHeader headers = 4;
}

message HttpResponse {
  required HttpHeaders parsed_headers = 1;
  optional bytes decoded_body = 2;
}
